--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tip Calculator</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <main>
+      <form>
+        <input id="bill" type="number" placeholder="Bill Amount" />
+        <input id="tip" type="number" placeholder="Tip %" />
+        <input id="people" type="number" placeholder="Number of People" />
+        <button type="button" id="calculate">Calculate</button>
+      </form>
+    </main>
+  </body>
 </html>
