add a results div which will output the final result calculation of the tip

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <input id="people" type="number" placeholder="Number of People" />
         <button type="button" id="calculate">Calculate</button>
       </form>
+      <div id="results">
+        <p>Tip: $<span id="tip-amount">0.00</span></p>
+        <p>Total: $<span id="total">0.00</span></p>
+        <p>Per Person: $<span id="per-person">0.00</span></p>
+      </div>
     </main>
   </body>
 </html>
