add label to every input to make it clear what the input is for

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     </header>
     <main>
       <form>
+        <label for="bill">Bill</label>
         <input id="bill" type="number" placeholder="Bill Amount" />
+        <label for="tip">Tip %</label>
         <input id="tip" type="number" placeholder="Tip %" />
+        <label for="people">Number of people </label>
         <input id="people" type="number" placeholder="Number of People" />
         <button type="button" id="calculate">Calculate</button>
       </form>
