change the input types from number to text so i can style them indivdually and not see the up and down arrow at the far right corner of the input

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <main>
       <form>
         <label for="bill">Bill</label>
-        <input id="bill" type="number" placeholder="Bill Amount" />
+        <input id="bill" type="text" placeholder="Bill Amount" />
         <label for="tip">Tip %</label>
-        <input id="tip" type="number" placeholder="Tip %" />
+        <input id="tip" type="text" placeholder="Tip %" />
         <label for="people">Number of people </label>
-        <input id="people" type="number" placeholder="Number of People" />
+        <input id="people" type="text" placeholder="Number of People" />
         <button type="button" id="calculate">Calculate</button>
       </form>
       <div id="results">
