--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <h1>The Modern Tip Calculator you've always wanted</h1>
+      <h1>The Modern Tip Calculator</h1>
     </header>
     <main>
       <form>
