--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <button type="button" id="calculate">Calculate</button>
       </form>
       <div id="results">
-        <p>Tip: $<span id="tip-amount">0.00</span></p>
-        <p>Total: $<span id="total">0.00</span></p>
-        <p>Per Person: $<span id="per-person">0.00</span></p>
+        <p>Tip:<span id="tip-amount"></span></p>
+        <p>Total:<span id="total"></span></p>
+        <p>Per Person:<span id="per-person"></span></p>
       </div>
     </main>
   </body>
