add script tag to the bottom of the body

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <p>Per Person:<span id="per-person"></span></p>
       </div>
     </main>
+    <script src="js/script.js"></script>
   </body>
 </html>
