--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
     <main>
       <form>
         <label for="bill">Bill</label>
-        <input id="bill" type="text" placeholder="Bill Amount" />
+        <input id="bill" type="text" value="$0.00" placeholder="Bill Amount" />
         <label for="tip">Tip %</label>
-        <input id="tip" type="text" placeholder="Tip %" />
+        <input id="tip" value="15%" type="text" placeholder="Tip %" />
         <label for="people">Number of people </label>
-        <input id="people" type="text" placeholder="Number of People" />
+        <input
+          id="people"
+          value="1"
+          type="text"
+          placeholder="Number of People"
+        />
         <button type="button" id="calculate">Calculate</button>
       </form>
       <div id="results">
