--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <form>
         <label for="bill">Bill</label>
-        <input id="bill" type="text" value="$0.00" placeholder="Bill Amount" />
+        <input id="bill" type="text" value="0.00" placeholder="Bill Amount" />
         <label for="tip">Tip %</label>
         <input id="tip" value="15%" type="text" placeholder="Tip %" />
         <label for="people">Number of people </label>
