removed the percent for the logic purposes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <label for="bill">Bill</label>
         <input id="bill" type="text" value="0.00" placeholder="Bill Amount" />
         <label for="tip">Tip %</label>
-        <input id="tip" value="15%" type="text" placeholder="Tip %" />
+        <input id="tip" value="15" type="text" placeholder="Tip %" />
         <label for="people">Number of people </label>
         <input
           id="people"
